--- a/SmartPhoneProducts1/index.html
+++ b/SmartPhoneProducts1/index.html
@@ -6,6 +6,17 @@
         text-align: center;
         background: red;
         }
+
+        img {
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            padding: 5px;
+            width: 150px;
+        }
+
+        img:hover {
+            box-shadow: 0 0 5px 1px black;
+        }
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
