--- a/Lab5/Ex1.html
+++ b/Lab5/Ex1.html
@@ -6,6 +6,24 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script>
+    var first_name = "Jonovan";
+    var middle_name = "Skyler";
+    var last_name = "Lee";
+    var full_name = first_name + " " + middle_name + " "+  last_name;
+    var formatted_name = full_name + '<br>' + first_name[0] + '.' + last_name[0]+ '.';
+    document.write(first_name);
+
+    </script>
+    <div is="ageDiv"></div>
 </body>
 </html>
+<script>
+    var stupid;
+    age = 22;
+
+    numberOfkids = 2;
+    document.getElementById('ageDiv').innerHTML ="I want " + numberOfkids + " kids!";
+    var numberOfkids;
+    document.getElementById('ageDiv').innerHTML = 22.08;
+</script>
