--- a/WODS/SmartPhoneProducts2/index.html
+++ b/WODS/SmartPhoneProducts2/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Smartphone Store Home</title>
     <style>
-    body{text-align: center;}
-    body{background: red;}
+    body {text-align: center;}
+    body {background: red;}
     </style>
 </head>
 <body>
-    <h1>Smartphone Store Home</h1>
-    <img src="images/phoneglobe.jpg" height="50%" width="50"%>
-    <h1><a href="./products_display.html"><br>Click the image to enter store!</a></h1>
+  <h1>Jonovan's Used Smart Phone Store</h1> 
+  <a href="products_display.html"><img src="./images/phoneglobe.jpg" height="50%" width="50%"></a>
+  <h1>Click the image to enter store!</h1>
 </body>
 </html>
