--- a/Lee_Jonovan_Assignment1/public/products.html
+++ b/Lee_Jonovan_Assignment1/public/products.html
@@ -1,6 +1,9 @@
 <script src="./product_data.js" type="text/javascript"></script>
 
 <script>
+    //Taken from assignment 1 example
+    //checks whether input is correct format
+    //if its a invalid input gives designated red error messages
     function isNonNegInt(q, return_errors = false) {
         errors = []; // assume no errors at first
         if(q == '') q =0; // handle blank inputs as if they are 0
@@ -8,6 +11,9 @@
         else if (q < 0) errors.push('<font color="red">Negative value!</font>'); // Check if it is non-negative
         else if (parseInt(q) != q) errors.push('<font color="red">Not an integer!</font>'); // Check that it is an integer
         return return_errors ? errors : (errors.length == 0);
+
+    //creates function to check if customer inputs quantity in the textbox
+    // taken from port 1 assignment 1 example
     } 
     function checkQuantityTextbox(theTextbox) {
         errs = isNonNegInt(theTextbox.value, true);
@@ -18,26 +24,26 @@
     window.onload = function () {
         let params = (new URL(document.location)).searchParams; 
         if (params.has('purchase_submit')) {
-            has_errors = false; 
-            total_qty = 0; 
-            for (i = 0; i < products.length; i++) { 
+            has_errors = false; // assume quantities are valid from the start
+            total_qty = 0; // need to check if something was selected so we will look if the total > 0
+            for (i = 0; i < products.length; i++) { // For loop that generates length of products from products.js file, (i=i+1 -> post increment: use the value of i first, then increment)
                 if (params.has(`quantity${i}`)) {
                     a_qty = params.get(`quantity${i}`);
-                   
+                   // make textboxes sticky in case of invalid data
                     product_selection_form[`quantity${i}`].value = a_qty;
                     total_qty += a_qty; 
                     if(!isNonNegInt(a_qty)) {
-                        has_errors = true; 
-                        checkQuantityTextbox(product_selection_form[`quantity${i}`]);
+                        has_errors = true; // oops, invalid quantity
+                        checkQuantityTextbox(product_selection_form[`quantity${i}`]);// show where the error is
                     }
                 }
             }
             
-            if(has_errors) {
+            if(has_errors) { // Now respond to errors or redirect to invoice if all is ok
                 alert("Please enter only valid quantities!");
-            } else if(total_qty == 0) { 
+            } else if(total_qty == 0) {  // no quantity selections, just give a general alert
                 alert("Please select some quantities!");
-            } else { 
+            } else { // all good to go!
                 window.location = `./invoice.html${document.location.search}`;
                 window.stop;
             }
@@ -71,6 +77,8 @@
         <div>
             <main>
                 <script>
+                    // for loop to generate products name, image, and price
+                    // creates quantity textbox for users to input "text" in, attatches checkQuantityTextbox function
                     for (i = 0; i < products.length; i++) {  
                         document.write(`
                             <section class="item">
