--- a/Lee_Jonovan_Assignment3/public/index.html
+++ b/Lee_Jonovan_Assignment3/public/index.html
@@ -12,9 +12,16 @@
 <body>
     <ul>
         <li><a href="index.html">HOME</a></li>
-        <li><a href="products.html">SHOP</a></li>
-        <li><a href="aboutus.html">ABOUT US</a></li>
-        <li><a href="topchoice.html">TOP CHOICE</a></li>
+        <!--list of links that are in the navbar-->
+        <li><a href="shoyu.html">shoyu</a></li>
+        <li><a href="goma.html">goma</a></li>
+        <li><a href="miso.html">miso</a></li>
+        <li><a href="kimchi.html">kimchi</a></li>
+        <li><a href="tonkotsu.html">tonkotsu</a></li>
+        <li><a href="aboutus.html">aboutus</a></li>
+        <li><a href="topchoice.html">topchoice</a></li>
+        <li><a href="/login">LOGIN</a></li>
+        <li><a href="/display_cart">CART</a></li>
     </ul> 
     
     <a href="products.html">
