--- a/Lee_Jonovan_Assignment3/public/shoyu.html
+++ b/Lee_Jonovan_Assignment3/public/shoyu.html
@@ -5,7 +5,7 @@
 
 
 <script>
-    var product_type = "Shoyu"; // sets variable to access the "Shoyu" array
+    var product_type = "shoyu"; // sets variable to access the "Shoyu" array
     //used from our assignment 1 but broken down to fit each product by itself
     //To check if the input was a valid
     //gives error message if not valid
@@ -97,7 +97,7 @@
         <div>
             <main>
                 <script>
-                    for (i = 0; i < totes.length; i++) {  // For loop that generates length of totes from product_data.js file, (i=i+1 -> post increment: use the value of i first, then increment)
+                    for (i = 0; i < shoyu.length; i++) {  // For loop that generates length of shoyu from product_data.js file, (i=i+1 -> post increment: use the value of i first, then increment)
                         document.write(`
                             <section class="item">
                                 <h2>${shoyu[i].product}</h2>
