--- a/Lee_Jonovan_Assignment3/public/index.html
+++ b/Lee_Jonovan_Assignment3/public/index.html
@@ -21,7 +21,7 @@
         <li><a href="aboutus.html">aboutus</a></li>
         <li><a href="topchoice.html">topchoice</a></li>
         <li><a href="/login">LOGIN</a></li>
-        <li><a href="/display_cart">CART</a></li>
+        <li><a href="cart.html">CART</a></li>
     </ul> 
     
     <a href="products.html">
