--- a/Lee_Jonovan_Assignment3/public/index.html
+++ b/Lee_Jonovan_Assignment3/public/index.html
@@ -21,10 +21,10 @@
         <li><a href="aboutus.html">aboutus</a></li>
         <li><a href="topchoice.html">topchoice</a></li>
         <li><a href="/login">LOGIN</a></li>
-        <li><a href="cart.html">CART</a></li>
+        <li><a href="/display_cart">CART</a></li>
     </ul> 
     
-    <a href="products.html">
+    <a href="shoyu.html">
         <img src="./images/logo.jpg" class="center" style="width:220x;height:300px;border:0;">
       </a>
     <h1>
