--- a/Lee_Jonovan_Assignment3/public/topchoice.html
+++ b/Lee_Jonovan_Assignment3/public/topchoice.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
-    <title>Document</title>
+    <title>Top Ramen</title>
     <link rel="stylesheet" href="./product_style.css">
 
     <h1>TOP CHOICE</h1>
