--- a/Lee_Jonovan_Assignment3/public/cart.html
+++ b/Lee_Jonovan_Assignment3/public/cart.html
@@ -19,7 +19,7 @@
         <li><a href="products.html">SHOP</a></li>
         <li><a href="aboutus.html">ABOUT US</a></li>
         <li><a href="faq.html">FAQ</a></li>
-        <li><a href="cart.html">CART</a></li>
+        <li><a href="/display_cart">CART</a></li>
 
     </ul>
     
