--- a/Lee_Jonovan_Assignment3/public/kimchi.html
+++ b/Lee_Jonovan_Assignment3/public/kimchi.html
@@ -91,7 +91,7 @@
                 <li><a href="aboutus.html">aboutus</a></li>
                 <li><a href="topchoice.html">topchoice</a></li>
                 <li><a href="/login">LOGIN</a></li>
-                <li><a href="cart.html">CART</a></li>
+                <li><a href="/display_cart">CART</a></li>
             </ul>
         </header>
         <div>
