--- a/Lee_Jonovan_Assignment2/public/products.html
+++ b/Lee_Jonovan_Assignment2/public/products.html
@@ -83,7 +83,7 @@
                         document.write(`
                             <section class="item">
                                 <h2>${products[i].product}</h2>
-                                <img src="${products[i].image}">
+                                <img src= "${products[i].image}" width="500px" height="500px">
                                 <h3>$${products[i].price}</h3>
                                 <h3><label id="quantity${i}_label"}">Quantity</label>
                                 <input type="text" placeholder="0" name="quantity${i}" 
