--- a/Lee_Jonovan_Assignment2/public/invoice.html
+++ b/Lee_Jonovan_Assignment2/public/invoice.html
@@ -56,7 +56,8 @@
         for (i = 0; i < products.length; i++) { // For loop that generates length of products from products.js file, (i=i+1 -> post increment: use the value of i first, then increment)
           if (quantities[i] > 0) { 
             // product row
-            extended_price = quantities[i] * products[i].price 
+            extended_price = quantities[i] * products[i].price
+            subtotal+=extended_price;
             document.write(` 
       <tr>
         <td width="43%">${products[i].product}</td> 
@@ -80,10 +81,11 @@
         else if (subtotal <= 10) { // Else if subtotal is less than or equal to $10, shipping = $10
           shipping = 10;
         }
-        else if (subtotal > 20){ // Else if subtotal is greater than $20, shipping = $0 (free)
+        else if(subtotal >= 11) {
           shipping = 0; // Free shipping!
-          document.write ('You qualify for free shipping!');
         }
+
+      
 
         // Compute grand total
         var grand_total = subtotal + tax + shipping; // Create 'total' variable and set it = to the subtotal plus tax plus shipping (all computed from above)
@@ -124,7 +126,7 @@
     <br><h2>
       OUR SHIPPING POLICY IS : <br> A subtotal $0 - $5.00 will be $5 shipping <br>
       A subtotal $5 - $10 will be $10 shipping <br>
-      Subtotals over $20 qualify for free shipping!
+      Subtotals over $11 qualify for free shipping!
     </h2>
     </div>
 </body>
