--- a/Lee_Jonovan_Assignment2/public/invoice.html
+++ b/Lee_Jonovan_Assignment2/public/invoice.html
@@ -132,7 +132,10 @@
 </body>
 
 <footer>
-    <h1>Thank you for choosing the best ramen on OAHU!</h1>
+  <script>
+    document.write(`<h1>Thank you ${params.get("username")} for choosing the best ramen on OAHU!</h1>`);
+  </script>
+    
 </footer>
 
 </html>
